# macOS-wifi-scanner

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/wifi_scanner/: main.py  scanner.swift  web.py
src/wifi_scanner/static/: script.js  style.css
src/wifi_scanner/templates/: index.html
tests/: test_main.py  test_web.py
