[project]
name = "wifi-scanner"
version = "0.1.0"
description = "A terminal-based WiFi scanner for macOS"
readme = "README.md"
authors = [{ name = "dratwa" }]
requires-python = ">=3.9"
dependencies = [
    "rich>=10.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "jinja2>=3.1.0",
]

[project.scripts]
wifi-scanner = "wifi_scanner.main:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
]
